fix: correct z-index positioning of trash button of element

--- a/blocks/elements/__trash-button/elements__trash-button.css
+++ b/blocks/elements/__trash-button/elements__trash-button.css
@@ -14,7 +14,6 @@
   position: absolute;
   top: 20px;
   right: 20px;
-  z-index: 1;
 }
 
 .elements__trash-button:hover {
